WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
254664
[GStreamer][MSE] Append pipeline is counting streams incorrectly with new init segments
https://bugs.webkit.org/show_bug.cgi?id=254664
Summary
[GStreamer][MSE] Append pipeline is counting streams incorrectly with new ini...
Xabier Rodríguez Calvar
Reported
2023-03-29 08:23:31 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Xabier Rodríguez Calvar
Comment 1
2023-03-29 08:26:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12114
EWS
Comment 2
2023-05-30 08:39:32 PDT
Committed
264676@main
(847e28d6e49b): <
https://commits.webkit.org/264676@main
> Reviewed commits have been landed. Closing PR #12114 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2023-05-30 08:40:17 PDT
<
rdar://problem/110007026
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug